<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="@dimen/_20ROR"
            android:background="#F2F2F2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/how_to_link_title_text"
                android:text="@string/how_to_link_title_text"
                android:layout_marginTop="@dimen/_10ROR"
                android:layout_marginLeft="@dimen/_20ROR"
                android:textSize="@dimen/_14ROR"
                android:textStyle="normal"
                android:fontFamily="@font/roboto_regular"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/how_to_link_title_text"
                android:id="@+id/how_to_link_sub_title_text"
                android:text="@string/how_to_link_sub_title_text"
                android:layout_marginTop="@dimen/_5ROR"
                android:layout_marginLeft="@dimen/_20ROR"
                android:textSize="@dimen/_10ROR"
                android:textStyle="normal"
                android:fontFamily="@font/roboto_regular"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/how_to_link_sub_title_text"
                android:layout_marginTop="@dimen/_10ROR"
                android:layout_marginLeft="@dimen/_20ROR"
                android:background="@color/white_color"
                android:orientation="horizontal"
                android:weightSum="1"
                android:id="@+id/smart_home_container"
                android:paddingLeft="@dimen/_10ROR">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_60ROR"
                    android:src="@drawable/google_home_voice"
                    android:id="@+id/smart_home_image_view"
                    android:padding="@dimen/_5ROR"
                    android:layout_weight=".3"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight=".7"
                    android:weightSum="1"
                    android:layout_marginLeft="@dimen/_20ROR">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:text="@string/smart_home_image_text_title"
                        android:id="@+id/smart_home_image_text_title"
                        android:gravity="bottom"
                        android:textStyle="bold"
                        android:layout_weight=".5"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:text="Google LLC"
                        android:id="@+id/smart_home_image_text_sub_title"
                        android:gravity="start"
                        android:textSize="@dimen/_10ROR"
                        android:textStyle="normal"
                        android:layout_weight=".5"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/smart_home_container"
                android:id="@+id/where_to_add_text"
                android:text="@string/where_to_add_text"
                android:layout_marginTop="@dimen/_10ROR"
                android:layout_marginLeft="@dimen/_20ROR"
                android:textSize="@dimen/_10ROR"
                android:textStyle="normal"
                android:fontFamily="@font/roboto_regular"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/where_to_add_text"
                android:layout_marginTop="@dimen/_10ROR"
                android:layout_marginLeft="@dimen/_20ROR"
                android:background="@color/white_color"
                android:orientation="horizontal"
                android:weightSum="1"
                android:id="@+id/oakter_smart_home_image_container"
                android:paddingLeft="@dimen/_10ROR">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_60ROR"
                    android:src="@drawable/oakter_smart_home_google"
                    android:id="@+id/oakter_smart_home_image_view"
                    android:padding="@dimen/_5ROR"
                    android:layout_weight=".3"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight=".7"
                    android:weightSum="1"
                    android:layout_marginLeft="@dimen/_20ROR">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:text="@string/oakter_smart_home_text_title"
                        android:id="@+id/oakter_smart_home_text_title"
                        android:gravity="bottom"
                        android:textStyle="bold"
                        android:layout_weight=".5"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:text="@string/oakter_smart_home_text_sub_title"
                        android:id="@+id/oakter_smart_home_text_sub_title"
                        android:gravity="start"
                        android:textSize="@dimen/_10ROR"
                        android:textStyle="normal"
                        android:layout_weight=".5"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/oakter_smart_home_image_container"
                android:id="@+id/asked_password_username_text"
                android:text="You will be asked for an Oakter username as password where you can can the below details"
                android:layout_marginTop="@dimen/_5ROR"
                android:layout_marginLeft="@dimen/_20ROR"
                android:textSize="@dimen/_10ROR"
                android:textStyle="normal"
                android:fontFamily="@font/roboto_regular"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/asked_password_username_text"
                android:id="@+id/credentials_for_text_title"
                android:text="@string/credentials_for_text_title"
                android:layout_marginTop="@dimen/_5ROR"
                android:layout_marginLeft="@dimen/_20ROR"
                android:textSize="@dimen/_14ROR"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_regular"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_90ROR"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_10ROR"
                android:layout_below="@id/credentials_for_text_title"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".5"
                    android:background="@color/white_color"
                    android:layout_marginRight="@dimen/_20ROR"
                    android:layout_marginLeft="@dimen/_20ROR"
                    android:weightSum="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".3"
                        android:text="username:"
                        android:gravity="center"
                        android:textSize="@dimen/_15ROR"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".7"
                        android:text="email"
                        android:id="@+id/user_email_id_login"

                        android:gravity="center_vertical|center"
                        android:textSize="@dimen/_10ROR"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".5"
                    android:layout_marginTop="@dimen/_10ROR"
                    android:background="@color/white_color"
                    android:layout_marginRight="@dimen/_20ROR"
                    android:layout_marginLeft="@dimen/_20ROR"
                    android:weightSum="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".3"
                        android:text="password:"
                        android:gravity="center"
                        android:textSize="@dimen/_15ROR"/>
                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".7">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="email"
                            android:id="@+id/user_password_login"
                            android:gravity="center"
                            android:textSize="@dimen/_10ROR"/>
                        <ImageView
                            android:id="@+id/copy_password_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/code_copied_icon"
                            android:layout_gravity="end"
                            android:adjustViewBounds="true"
                            android:padding="@dimen/_12ROR"
                            />
                    </FrameLayout>

                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>


    </RelativeLayout>